# magnificent-backend

./: .gitignore  Dockerfile  Makefile  Makefile.override.example  README.md  docker-compose.yaml  manage.py  pyproject.toml
.github/workflows/: build-push-magnificent-api.yaml
k8s/dev/: deployment.yaml  service.yaml
magnificent/: asgi.py  settings.py  urls.py  wsgi.py
