[tool.poetry]
name = "magnificent-backend"
version = "0.1.0"
description = ""
authors = ["Ashish Shrestha <ashishsth7586@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.5"
psycopg2-binary = "^2.9.7"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
